添加了星巴克到中部

--- a/星巴克/index.html
+++ b/星巴克/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/index.css ">
 </head>
 <body>
 <div id="header">
@@ -22,11 +23,33 @@
             <a href="#">登录</a><span> 或 </span><a href="#">注册</a>
         </p>
     </div>
-    <div id="homePage">
-        <div class="item">
-            <div class="konwmore"><span>了解更多 >></span></div>
-            <img src="img/kv-image-pc-20171220175727.jpg " alt="" class="pc">
-            <img src="" alt="" class="phone">
+    <!--<div id="homePage">-->
+        <!--<div class="item">-->
+            <!--<div class="konwmore"><span>了解更多 >></span></div>-->
+            <!--<img src="img/kv-image-pc-20171220175727.jpg " alt="" class="pc">-->
+            <!--<img src="" alt="" class="phone">-->
+        <!--</div>-->
+    <!--</div>-->
+</div>
+<div id="img-box">
+    <div class="konwmore"><span>了解更多 >></span></div>
+    <img class="img01" src="img/kv-image-pc-20171220175727.jpg " alt="">
+    <img class="img02" src="img/kv-image-mobile-20171220175730.jpg " alt="">
+</div>
+<div id="home-rewards">
+    <div id="container">
+        <div class="rewards-mark">
+            <p>星享卡</p>
+            <img src="img/rewards_logo_20170209.svg" alt="">
+        </div>
+        <div class="rewards-content">
+            <h3>星享俱乐部</h3>
+            <p>开启您的星享之旅，星星越多、会员等级越高、好礼越丰富</p>
+            <div class="rewards-btns">
+                <a href="#" class="btns">登录</a>
+                <a href="#" class="btns">注册</a>
+                <a class="more" href="">了解更多 >></a>
+            </div>
         </div>
     </div>
 </div>
