添加了星巴克到中下部

--- a/星巴克/index.html
+++ b/星巴克/index.html
@@ -53,5 +53,53 @@
         </div>
     </div>
 </div>
+<div id="app">
+    <img src="img/app_qr.png" alt="">
+    <div class="app-text">
+        <p>下载全新星巴克中国官方APP，开启更便捷的星巴克体验。</p>
+        <a href="#">了解更多 >></a>
+        <a class="btnss" href="#"></a>
+    </div>
+</div>
+<div id="mosaic">
+    <a class="mosaic-left"  href="#">
+        <img src="img/tmall-banner-20180109104542.jpg" alt="">
+        <h3>星巴克天猫旗舰店</h3>
+        <h2>冬日・暖意相随</h2>
+    </a>
+    <a class="mosaic-right" href="#">
+        <img src="img/FT-Grid%20(2)-20170328191448.jpg " alt="">
+        <h3>气致™冷萃咖啡</h3>
+        <h2>如天鹅绒般丝滑</h2>
+    </a>
+</div>
+<div id="say">
+    <div class="imglist">
+        <div class="imglist1">
+            <div class="img1"></div>
+            <div class="img2"></div>
+        </div>
+        <div class="imglist2">
+            <div class="img3"></div>
+            <div class="img4"></div>
+        </div>
+    </div>
+</div>
+<div id="apple-watch">
+    <div class="watch-img">
+        <img src="img/web-iwatch-cn.png" alt="">
+    </div>
+    <div class="watch-info">
+        <p>
+            星享更同步。现在您可以通过Apple Watch打开星巴克移动应用。更便捷地支付、查询星享卡还有查找附近门店。
+        </p>
+        <a href="#">了解更多 >></a>
+    </div>
+    <div class="watch-qr">
+        <img class="qr1"  src="img/app_qr_20170209.png " alt="">
+        <img src="img/udp-starbucks-cn.svg" alt="" class="qr2">
+        <p>扫码下载APP</p>
+    </div>
+</div>
 </body>
 </html>
