--- a/星巴克/index.html
+++ b/星巴克/index.html
@@ -101,5 +101,16 @@
         <p>扫码下载APP</p>
     </div>
 </div>
+<div id="collection">
+    <p class="collection-title">星巴克精选</p>
+    <p class="collection-info">在星巴克天猫旗舰店发现更多咖啡心意</p>
+    <ul class="collection-box">
+        <li class="box-1"><a href="#"><img src="img/1@2x.png" alt=""><b>星享卡</b><p>开始你的专属星巴克旅程</p></a></li>
+        <li class="box-2"><a href="#"><img src="img/2@2x.png" alt=""><b>星礼卡</b><p>用一份星礼，让心意相随</p></a></li>
+        <li class="box-3"><a href="#"><img src="img/3@2x.png" alt=""><b>电子产品券</b><p>心意 从这一杯开始</p></a></li>
+        <li class="box-4"><a href="#"><img src="img/4@2x.png" alt=""><b>咖啡生活</b><p>星巴克用心制作</p></a></li>
+
+    </ul>
+</div>
 </body>
 </html>
