--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="div3">
         <img src="./images/img3.png" alt="">
+        <div class="aa">wdffgs</div>
     </div>
 </body>
 </html>
